--- a/myhockeyapp/views/player_stats.jade
+++ b/myhockeyapp/views/player_stats.jade
@@ -3,91 +3,100 @@ extends layout
 block links
     link(href='/stylesheets/c3.css' rel='stylesheet' type='text/css')
     link(href='/stylesheets/style.css' rel='stylesheet' type='text/css')
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         
 block scripts    
     script(src='/javascripts/d3.min.js' charset='utf-8' type='text/javascript')
     script(src='/javascripts/c3.min.js' type='text/javascript')
     script(src='/javascripts/jquery-2.2.1.min.js' type='text/javascript')    
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>  
 
 block content
     h1= title
     p Welcome to #{title} for player ##{player_id}
-    table
-        thead
-            tr
-                th Period
-                th Time
-                th Kind
-                th Score
-                th Assist
-        tbody
-            each stats in data
-                if stats.score == player_id
-                    tr
-                        td #{stats.period}
-                        td #{stats.time}
-                        td #{stats.kind}
-                        td goal
-                        td 
-                if (stats.assist1 == player_id) || (stats.assist2 == player_id)  
-                    tr                      
-                        td #{stats.period}
-                        td #{stats.time}
-                        td #{stats.kind}
-                        td 
-                        td assist
-    div Goals and Assists
+    div.table-responsive
+        table.table
+            thead
+                tr
+                    th Period
+                    th Time
+                    th Kind
+                    th Score
+                    th Assist
+            tbody
+                each stats in data
+                    if stats.score == player_id
+                        tr
+                            td #{stats.period}
+                            td #{stats.time}
+                            td #{stats.kind}
+                            td goal
+                            td 
+                    if (stats.assist1 == player_id) || (stats.assist2 == player_id)  
+                        tr                      
+                            td #{stats.period}
+                            td #{stats.time}
+                            td #{stats.kind}
+                            td 
+                            td assist
+    p
+    div
+        h4 Goals, Assists (Scatter)
     div(id='chart00' class='c3chart') 
     script(type='text/javascript').
-            var chart = c3.generate({
-                bindto: '#chart00',
-                data: {
-                    json: !{JSON.stringify(homescore)},
-                    keys: {
-                        x:'time',
-                        value: ['goal', 'assist'],
-                    },
-                    type: 'scatter',
-                    xFormat: '%M:%S'
+        var chart = c3.generate({
+            bindto: '#chart00',
+            data: {
+                json: !{JSON.stringify(homescore)},
+                keys: {
+                    x:'time',
+                    value: ['goal', 'assist'],
                 },
-                axis: {
-                    x: {
-                        label:'Time',
-                        type: 'timeseries',
-                        tick: {
-                            format: '%M:%S'
-                        }
+                type: 'scatter',
+                xFormat: '%M:%S'
+            },
+            axis: {
+                x: {
+                    label:'Time',
+                    type: 'timeseries',
+                    tick: {
+                        format: '%M:%S'
                     }
-                },
-                regions: [
-                    {axis: 'x', start: '0:00', end: '20:00', class: 'region-period1'},
-                    {axis: 'x', start: '20:01', end: '40:00', class: 'region-period2'},
-                    {axis: 'x', start: '40:01', end: '60:00', class: 'region-period3'},
-                ],
-                tooltip: {
-                    format: {
-                        title: function(d) {
-                            var format = d3.time.format('%M:%S');
-                            return 'At ' + format(d);
-                        },
-                        name: function(name, ratio, id, index) {
-                            return name;
-                        },
-                        value: function(value, ratio, id) {
-                            if (id == 'goal') {
-                                if (value == #{player_id}) {
-                                    return 'No assist';
-                                } else {
-                                    return 'Assist from ' + value;
-                                }
-                                
+                }
+            },
+            regions: [
+                {axis: 'x', start: '0:00', end: '20:00', class: 'region-period1'},
+                {axis: 'x', start: '20:01', end: '40:00', class: 'region-period2'},
+                {axis: 'x', start: '40:01', end: '60:00', class: 'region-period3'},
+            ],
+            tooltip: {
+                format: {
+                    title: function(d) {
+                        var format = d3.time.format('%M:%S');
+                        return 'At ' + format(d);
+                    },
+                    name: function(name, ratio, id, index) {
+                        return name;
+                    },
+                    value: function(value, ratio, id) {
+                        if (id == 'goal') {
+                            if (value == #{player_id}) {
+                                return 'No assist';
                             } else {
-                                return 'Assist to ' + value;
+                                return 'Assist from ' + value;
                             }
+                        } else {
+                            return 'Assist to ' + value;
                         }
                     }
                 }
-            });  
+            }
+        });  
+    p
+    div 
+        h4 Goals (PowerPlay, ShortHand, EmptyNet), Assists, Penalty in Minutes (TimeSeries) 
     div(id='chart10' class='c3chart')                                      
     script(type='text/javascript').
         var chart0 = c3.generate({
@@ -108,9 +117,11 @@ block content
                 }
             }
         });
+    p
     div(style='width:100%;white-space:nowrap')
         div(style='display:inline-block;width:32%')                                     
-            div Goal By Period          
+            div 
+                h4 Goal By Period (Pie Chart)         
             div(id='chart20' class='c3chart') 
             script(type='text/javascript').
                 var chart = c3.generate({
@@ -133,99 +144,105 @@ block content
                 });              
         div(style='display:inline-block;width:2%')  
         div(style='display:inline-block;width:32%')           
-                    div Assist By Period              
-                    div(id='chart21' class='c3chart') 
-                    script(type='text/javascript').
-                            var chart = c3.generate({
-                                bindto: '#chart21',
-                                size: {
-                                    height: 240,
-                                    width: 240
-                                },                                
-                                data: {
-                                    json: !{JSON.stringify(assistbyperiod)},
-                                    type: 'pie',
-                                },
-                                pie: {
-                                    label: {
-                                        format: function(value, ration, id) {
-                                            return value;
-                                        }
-                                    }
-                                }
-                            });               
+            div
+                h4 Assist By Period (Pie Chart)              
+            div(id='chart21' class='c3chart') 
+            script(type='text/javascript').
+                var chart = c3.generate({
+                    bindto: '#chart21',
+                    size: {
+                        height: 240,
+                        width: 240
+                    },                                
+                    data: {
+                        json: !{JSON.stringify(assistbyperiod)},
+                        type: 'pie',
+                    },
+                    pie: {
+                        label: {
+                            format: function(value, ration, id) {
+                                return value;
+                            }
+                        }
+                    }
+                });               
         div(style='display:inline-block;width:2%')  
         div(style='display:inline-block;width:32%')     
-                    div Point By Period                      
-                    div(id='chart22' class='c3chart') 
-                    script(type='text/javascript').
-                            var chart = c3.generate({
-                                bindto: '#chart22',
-                                size: {
-                                    height: 240,
-                                    width: 240
-                                },                                
-                                data: {
-                                    json: !{JSON.stringify(pointbyperiod)},
-                                    type: 'pie',
-                                },
-                                pie: {
-                                    label: {
-                                        format: function(value, ration, id) {
-                                            return value;
-                                        }
-                                    }
-                                }
-                            });                               
+            div
+                h4 Point By Period (Pie Chart)                      
+            div(id='chart22' class='c3chart') 
+            script(type='text/javascript').
+                var chart = c3.generate({
+                    bindto: '#chart22',
+                    size: {
+                        height: 240,
+                        width: 240
+                    },                                
+                    data: {
+                        json: !{JSON.stringify(pointbyperiod)},
+                        type: 'pie',
+                    },
+                    pie: {
+                        label: {
+                            format: function(value, ration, id) {
+                                return value;
+                            }
+                        }
+                    }
+                });    
+    p                           
     div(style='width:100%;white-space:nowrap')
         div(style='display:inline-block;width:32%')    
-                    div Goal By Kind          
-                    div(id='chart30' class='c3chart') 
-                    script(type='text/javascript').
-                            var chart = c3.generate({
-                                bindto: '#chart30',
-                                size: {
-                                    height: 240,
-                                    width: 240
-                                },
-                                data: {
-                                    json: !{JSON.stringify(goalbykind)},
-                                    type: 'pie',
-                                },
-                                pie: {
-                                    label: {
-                                        format: function(value, ration, id) {
-                                            return value;
-                                        }
-                                    }
-                                }
-                            });                          
+            div
+                h4 Goal By Kind (Pie Chart)          
+            div(id='chart30' class='c3chart') 
+            script(type='text/javascript').
+                var chart = c3.generate({
+                    bindto: '#chart30',
+                    size: {
+                        height: 240,
+                        width: 240
+                    },
+                    data: {
+                        json: !{JSON.stringify(goalbykind)},
+                        type: 'pie',
+                    },
+                    pie: {
+                        label: {
+                            format: function(value, ration, id) {
+                                return value;
+                            }
+                        }
+                    }
+                });                          
         div(style='display:inline-block;width:2%')  
         div(style='display:inline-block;width:32%')  
-                    div Assist From By Player          
-                    div(id='chart31' class='c3chart') 
-                    script(type='text/javascript').
-                            var chart = c3.generate({
-                                bindto: '#chart31',
-                                size: {
-                                    height: 240,
-                                    width: 240
-                                },
-                                data: {
-                                    json: !{JSON.stringify(assistfrombyplayer)},
-                                    type: 'pie',
-                                },
-                                pie: {
-                                    label: {
-                                        format: function(value, ration, id) {
-                                            return value;
-                                        }
-                                    }
-                                }
-                            });              
+            div
+                h4 Assist From By Player (Pie Chart)          
+            div(id='chart31' class='c3chart') 
+            script(type='text/javascript').
+                var chart = c3.generate({
+                    bindto: '#chart31',
+                    size: {
+                        height: 240,
+                        width: 240
+                    },
+                    data: {
+                        json: !{JSON.stringify(assistfrombyplayer)},
+                        type: 'pie',
+                    },
+                    pie: {
+                        label: {
+                            format: function(value, ration, id) {
+                                return value;
+                            }
+                        }
+                    }
+                });              
         div(style='display:inline-block;width:2%')  
         div(style='display:inline-block;width:32%')    
-                    div Assist To By Player              
+                    div
+                        h4 Assist To By Player (Pie Chart)              
                     div(id='chart32' class='c3chart') 
                     script(type='text/javascript').
                             var chart = c3.generate({
@@ -245,10 +262,12 @@ block content
                                         }
                                     }
                                 }
-                            });               
+                            });     
+    p          
     div(style='width:100%;white-space:nowrap')
         div(style='display:inline-block;width:32%')     
-                    div Penalty By Period                      
+                    div
+                        h4 Penalty By Period (Pie Chart)                      
                     div(id='chart40' class='c3chart') 
                     script(type='text/javascript').
                             var chart = c3.generate({
@@ -271,7 +290,8 @@ block content
                             });      
         div(style='display:inline-block;width:2%')  
         div(style='display:inline-block;width:32%')    
-                    div Penalty By Kind                      
+                    div
+                        h4 Penalty By Kind (Pie Chart)                      
                     div(id='chart50' class='c3chart') 
                     script(type='text/javascript').
                             var chart = c3.generate({
@@ -294,24 +314,25 @@ block content
                                         }
                                     }
                                 }
-                            });              
+                            });      
+    p        
     div(style='width:100%;white-space:nowrap')
         div(style='display:inline-block;width:32%') 
-            
-                    div Penalty in Minutes By Period                      
-                    div(id='chart41' class='c3chart') 
-                    script(type='text/javascript').
-                            var chart = c3.generate({
-                                bindto: '#chart41',
-                                size: {
-                                    height: 240,
-                                    width: 240
-                                },                                
-                                data: {
-                                    json: !{JSON.stringify(pimbyperiod)},
-                                    type: 'pie',
-                                },
-                                pie: {
+            div
+                h4 Penalty in Minutes By Period (Pie Chart)                      
+            div(id='chart41' class='c3chart') 
+            script(type='text/javascript').
+                var chart = c3.generate({
+                    bindto: '#chart41',
+                    size: {
+                        height: 240,
+                        width: 240
+                    },                                
+                    data: {
+                        json: !{JSON.stringify(pimbyperiod)},
+                        type: 'pie',
+                    },
+                    pie: {
                                     label: {
                                         format: function(value, ration, id) {
                                             return value;
@@ -321,7 +342,8 @@ block content
                             });                   
         div(style='display:inline-block;width:2%')  
         div(style='display:inline-block;width:32%')       
-                    div Penalty in Minutes By Kind                      
+                    div
+                        h4 Penalty in Minutes By Kind (Pie Chart)                      
                     div(id='chart51' class='c3chart') 
                     script(type='text/javascript').
                             var chart = c3.generate({
