--- a/myhockeyapp/views/team_stats.jade
+++ b/myhockeyapp/views/team_stats.jade
@@ -3,41 +3,45 @@ extends layout
 block links
     link(href='/stylesheets/c3.css' rel='stylesheet' type='text/css')
     link(href='/stylesheets/style.css' rel='stylesheet' type='text/css')
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     
 block scripts    
     script(src='/javascripts/d3.min.js' charset='utf-8' type='text/javascript')
     script(src='/javascripts/c3.min.js' type='text/javascript')
     script(src='/javascripts/jquery-2.2.1.min.js' type='text/javascript')    
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>  
 
 block content
     h1= title
-    p Welcome to #{title}
-    table
-        thead
-            tr
-                th Game#
-                th Date
-                th Time
-                th Opponent
-                th Homw/Away
-                th Kind
-                th Rink
-                th Goals For
-                th Goals Against
-                th Penalty in Minutes
-        tbody
-            each game in game_stats
+    div.table-responsive
+        table.table
+            thead
                 tr
-                    td #{game.number}
-                    td #{game.date}
-                    td #{game.time}
-                    td #{game.opponent}
-                    td #{game.homeaway}
-                    td #{game.kind}
-                    td #{game.rink}
-                    td #{game.gf}
-                    td #{game.ga}
-                    td #{game.pim}
+                    th Game#
+                    th Date
+                    th Time
+                    th Opponent
+                    th Homw/Away
+                    th Type
+                    th Rink
+                    th Goals For
+                    th Goals Against
+                    th Penalty in Minutes
+            tbody
+                each game in game_stats
+                    tr
+                        td #{game.number}
+                        td #{game.date}
+                        td #{game.time}
+                        td #{game.opponent}
+                        td #{game.homeaway}
+                        td #{game.kind}
+                        td #{game.rink}
+                        td #{game.gf}
+                        td #{game.ga}
+                        td #{game.pim}
     p                
     div
         h4 Goals, Assists Per Game (Bar Chart)    
