--- a/myhockeyapp/public/stylesheets/c3.css
+++ b/myhockeyapp/public/stylesheets/c3.css
@@ -156,3 +156,15 @@
 .c3-chart-arc .c3-gauge-value {
   fill: #000;
   /*  font-size: 28px !important;*/ }
+
+.c3-region.region-period1 {
+  fill: red;
+}
+
+.c3-region.region-period2 {
+  fill: blue;
+}
+
+.c3-region.region-period3 {
+  fill: yellow;
+}
