--- a/myhockeyapp/views/index.jade
+++ b/myhockeyapp/views/index.jade
@@ -1,5 +1,13 @@
 extends layout
 
+block links
+    link(href='/stylesheets/style.css' rel='stylesheet' type='text/css')
+    link(href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css")
+    link(href="/stylesheets/bootstrap-theme.min.css" rel="stylesheet" type="text/css")
+    
+block scripts    
+    script(src='/javascripts/jquery-2.2.1.min.js' type='text/javascript')    
+    script(src='/javascripts/bootstrap.min.js' type='text/javascript')
+    
 block content
-  h1= title
-  p Welcome to #{title}
+
