--- a/myhockeyapp/views/layout.jade
+++ b/myhockeyapp/views/layout.jade
@@ -11,16 +11,27 @@ html
     
   block scripts
     script(src='/javascripts/bootstrap.min.js' type='text/javascript')
+    script(src='/javascripts/jquery-2.2.1.min.js' type='text/javascript')
     
   body
-    ul.nav.nav-pills
-      li.active(role="presentation")
-        a(href="/" aria-controls="/" role="pill" data-toggle="pill" ) Home
-      li(role="presentation")
-        a(href="teamstats"  aria-controls="teamstats" role="pill" data-toggle="pill") Team Stats
-      li(role="presentation")
-        a(href="playerstats" aria-controls="/playerstats" role="pill" data-toggle="pill") Player Stats
-      li(role="presentation")
-        a(href="gameentry" aria-controls="/gameentry" role="pill" data-toggle="pill") Game Entry
-        
+    nav.navbar.navbar-inverse.navbar-fixed-up
+      div.container-fluid
+        div.navbar-header
+          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#navbar-collapse-1")
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href="#") Hockey Stats
+        div#navbar-collapse-1.collapse.navbar-collapse
+          ul.nav.navbar-nav.navbar-left
+            li
+              a(href="/") Home
+            li
+              a(href="/teamstats" ) Team Stats
+            li
+              a(href="/playerstats") Player Stats
+            li
+              a(href="/gameentry") Game Entry
+
     block content
