--- a/myhockeyapp/views/game_entry_visitor_penalty.jade
+++ b/myhockeyapp/views/game_entry_visitor_penalty.jade
@@ -36,7 +36,7 @@ block content
             div.form-group
                 label.col-sm-3.control-label(for='time') Time
                 div.col-sm-9
-                    input#time.form-control(type='time', name='time')
+                    input#time.form-control(type='text', name='time')
             div.form-group
                 label.col-sm-3.control-label(for='player') Player
                 div.col-sm-9
